test plugin on local wp site; fix zindex so footer members dont overlap with chat; fix button overflow; add shadow

--- a/culinary-chatbot-plugin/chatbot-style.css
+++ b/culinary-chatbot-plugin/chatbot-style.css
@@ -9,12 +9,12 @@ Styles for chatbot ui
     }
 }*/
 
-body{
+/*body{
     background-color:rgb(191, 203, 218);
-}
+}*/
 
 .chatBotBox{
-    border:2px solid #040203;
+    border:1px solid #040203;
     background-color:rgb(249, 248, 246);
     position:fixed;
     bottom: -25%;
@@ -26,6 +26,8 @@ body{
     font-size:small;
     display:flex;
     flex-direction: column;
+    z-index:7;
+    box-shadow: 5px 5px 5px rgba(174, 160, 105, 0.482);
 }
 
 .chatBotTab{
@@ -51,13 +53,14 @@ body{
     margin: .2em;
 }
 
-p{
+.chatBotMessageBox p{
     font-family:Georgia, 'Times New Roman', Times, serif;
     border:solid 2px burlywood;
     /* width: inherits; */
     margin-bottom:10px;
     overflow-wrap:break-word;
     font-size:1em;
+    padding:.5%;
 }
 
 .userMessage{
@@ -72,16 +75,18 @@ p{
     margin:0px;
     padding:1px;
     height:15%;
+    text-align: center;
 }
 
 .chatBotInput{
     width:77%;
-    
+    overflow-wrap:normal;
 }
 .chatBotButton{
    width:20%;
    background-color: #f4a609;
    border:1px solid white;
+   font-size:0.7em;
 }
 
 .openChatBox{
